hardt (1.2-1) RELEASED; urgency=medium

  [ Henrik Witt-Hansen ]
  * Added missing uint8->int16 and uint8->int32 typeconverters

 -- Mackie <henrik@hardttoolkit.org>  Tue, 23 Feb 2021 23:35:00 +0100

hardt (1.2-0) RELEASED; urgency=medium

  [ Henrik Witt-Hansen ]
  * Multipliers now have unity gain (1, no matter which lo amplitude is used)
  * HMux now have a duplex mode where a single channel is duplicated, turning
    a monostream into a pseudo-stereo stream
  * Fixed error when having multiple channels on an audio writer

 -- Mackie <henrik@hardttoolkit.org>  Sun, 21 Feb 2021 20:20:00 +0100

hardt (1.1-4) RELEASED; urgency=medium

  [ Henrik Witt-Hansen ]
  * Add specific helper methods for sending a command with different types of content

 -- Mackie <henrik@hardttoolkit.org>  Fri, 06 Nov 2020 23:40:00 +0200

hardt (1.1-3) RELEASED; urgency=medium

  [ Henrik Witt-Hansen ]
  * Allow changing direction of the shift by the translate-by-four components

 -- Mackie <henrik@hardttoolkit.org>  Mon, 04 Nov 2020 16:30:00 +0200

hardt (1.1-2) RELEASED; urgency=medium

  [ Henrik Witt-Hansen ]
  * Make sure parallel generators do not get out of sync
  * Maintain phase difference between generators when changing the frequency of the iq multiplier

 -- Mackie <henrik@hardttoolkit.org>  Mon, 03 Nov 2020 23:30:00 +0200

hardt (1.1-1) RELEASED; urgency=medium

  [ Henrik Witt-Hansen ]
  * Fixed bug in displaying signal spectrum for pcm/wav data

 -- Mackie <henrik@hardttoolkit.org>  Mon, 13 Oct 2020 18:30:00 +0200

hardt (1.1-0) RELEASED; urgency=medium

  [ Henrik Witt-Hansen ]
  * Added input reader for the RTL-SDR dongle
  * Added iq versions of several often used components
  * Various minor fixes and improvements

 -- Mackie <henrik@hardttoolkit.org>  Mon, 12 Oct 2020 20:30:00 +0200

hardt (1.0-27) RELEASED; urgency=medium

  [ Henrik Witt-Hansen ]
  * Added decimators (several types)
  * Added interpolator
  * Added a complex filter
  * Added IFFT